# FinGuard-Fraud-API

./: .gitignore  LICENSE  README.md  main.py  pyproject.t  pyproject.toml  requirements.txt
data/: README.md
notebooks/: eda.ipynb
src/finguard_fraud_api/: __init__.py
